--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ pretty_env_logger = "0.4"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 once_cell = "1.9"
 gtk = {version = "0.4", package = "gtk4"}
+adw = {package = "libadwaita", version = "0.1.1"}
