--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ gettext-rs = { version = "0.7", features = ["gettext-system"] }
 once_cell = "1.9"
 gtk = {version = "0.4", package = "gtk4"}
 adw = {package = "libadwaita", version = "0.1.1"}
+gtk-macros = "0.3"
+ashpd = "0.3.2"
