--- a/data/com.benzler.colors.metainfo.xml.in.in
+++ b/data/com.benzler.colors.metainfo.xml.in.in
@@ -5,7 +5,7 @@
   <metadata_license>CC0</metadata_license>
   <!-- Insert your license of choice here -->
   <!-- <project_license>MIT</project_license> -->
-  <name>Color Picker</name>
+  <name>Eyedropper</name>
   <summary>Write a GTK + Rust application</summary>
   <description>
     <p>A boilerplate template for GTK + Rust. It uses Meson as a build system and has flatpak support by default.</p>
@@ -23,12 +23,12 @@
     <release version="0.1.0" date="2019-07-11" />
   </releases>
   <kudos>
-     <!--
+    <!--
        GNOME Software kudos:
        https://gitlab.gnome.org/GNOME/gnome-software/-/blob/main/doc/kudos.md
      -->
-     <kudo>ModernToolkit</kudo>
-     <kudo>HiDpiIcon</kudo>
+    <kudo>ModernToolkit</kudo>
+    <kudo>HiDpiIcon</kudo>
   </kudos>
   <developer_name>FineFindus</developer_name>
   <update_contact>finefindusgh@gmail.com</update_contact>
