--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "color-picker"
+name = "eyedropper"
 version = "0.1.0"
 authors = ["FineFindus <finefindusgh@gmail.com>"]
 edition = "2021"
@@ -10,6 +10,7 @@ pretty_env_logger = "0.4"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 once_cell = "1.9"
 gtk = {version = "0.4", package = "gtk4"}
+glib = "0.15.12"
 adw = {package = "libadwaita", version = "0.1.1"}
 gtk-macros = "0.3"
 ashpd = "0.3.2"
