--- a/data/com.github.finefindus.eyedropper.desktop.in.in
+++ b/data/com.github.finefindus.eyedropper.desktop.in.in
@@ -2,7 +2,7 @@
 Name=Eyedropper
 Comment=Write a GTK + Rust application
 Type=Application
-Exec=color-picker
+Exec=eyedropper
 Terminal=false
 Categories=GNOME;GTK;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
