--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project(
-  'color-picker',
+  'eyedropper',
   'rust',
   version: '0.1.0',
   meson_version: '>= 0.59',
@@ -9,7 +9,7 @@ project(
 i18n = import('i18n')
 gnome = import('gnome')
 
-base_id = 'com.benzler.colors'
+base_id = 'com.github.finefindus.eyedropper'
 
 dependency('glib-2.0', version: '>= 2.66')
 dependency('gio-2.0', version: '>= 2.66')
