--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ adw = {package = "libadwaita", version = "0.1.1"}
 gtk-macros = "0.3"
 ashpd = "0.3.2"
 rand = "0.8.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
