--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,12 @@ license-file = "LICENSE"
 homepage = "https://github.com/finefindus/eyedropper"
 repository = "https://github.com/finefindus/eyedropper"
 
+
+#override package level optimazation, to always be maximum
+[profile.release.package."*"] 
+opt-level = 3
+
+
 [dependencies]
 log = "0.4"
 pretty_env_logger = "0.4"
