added xyz format

--- a/data/com.github.finefindus.eyedropper.gschema.xml.in
+++ b/data/com.github.finefindus.eyedropper.gschema.xml.in
@@ -43,5 +43,10 @@
       <summary>Show CMYK Model</summary>
       <description>Whether the application should show the CMYK code.</description>
     </key>
+    <key name="show-xyz-model" type="b">
+      <default>false</default>
+      <summary>Show XYZ Model</summary>
+      <description>Whether the application should show the XYZ code.</description>
+    </key>
   </schema>
 </schemalist>
