--- a/data/com.github.finefindus.eyedropper.desktop.in.in
+++ b/data/com.github.finefindus.eyedropper.desktop.in.in
@@ -1,12 +1,13 @@
 [Desktop Entry]
 Name=Eyedropper
-Comment=Write a GTK + Rust application
+GenericName=Color Picker
+Comment=An easy-to-use color picker
 Type=Application
 Exec=eyedropper
 Terminal=false
-Categories=GNOME;GTK;
+Categories=GNOME;GTK;Development;Graphics;Utility;WebDevelopment;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
-Keywords=Gnome;GTK;
+Keywords=Gnome;GTK;Color;Color Picker;Picker;Palette;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=@icon@
 StartupNotify=true
