--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,5 @@ gtk-macros = "0.3"
 ashpd = "0.3.2"
 rand = "0.8.5"
 
+#used until https://github.com/gtk-rs/gtk4-rs/issues/1114 is fixed
+libc = "0.2.132"
