--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 data/com.github.finefindus.eyedropper.desktop.in.in
 data/com.github.finefindus.eyedropper.gschema.xml.in
 data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+data/resources/ui/preferences.ui
 data/resources/ui/shortcuts.ui
 data/resources/ui/window.ui
 src/application.rs
