--- a/data/com.github.finefindus.eyedropper.gschema.xml.in
+++ b/data/com.github.finefindus.eyedropper.gschema.xml.in
@@ -13,6 +13,11 @@
       <default>false</default>
       <summary>Window maximized state</summary>
     </key>
+    <key name="format-order" type="as">
+      <default>[ 'hex', 'rgb', 'hsl', 'hsv', 'cmyk', 'xyz', 'cielab' ]</default>
+      <summary>Order of the formats</summary>
+      <description>In which order the formats should be displayed. Only possible values should the formats.</description>
+    </key>
     <key name="alpha-position" type="i">
       <default>0</default>
       <summary>Alpha Value Position</summary>
