--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,8 +1,17 @@
 data/com.github.finefindus.eyedropper.desktop.in.in
 # This file includes the settings variables and their descriptions, it should not be translated
-#data/com.github.finefindus.eyedropper.gschema.xml.in
+# find all ui files with new strings
+# find data -name "*.ui*" -print
 data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+data/resources/ui/color-model-entry.ui
+data/resources/ui/hex-entry.ui
 data/resources/ui/preferences.ui
 data/resources/ui/shortcuts.ui
 data/resources/ui/window.ui
+
+#find all rust files with strings
+# grep gettext src/**/*.rs | cut -d: -f1 | uniq 
 src/application.rs
+src/main.rs
+src/widgets/preferences.rs
+src/window.rs
