--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -44,6 +44,16 @@
   <url type="bugtracker">https://github.com/FineFindus/eyedropper/issues</url>
   <content_rating type="oars-1.0" />
   <releases>
+    <release version="0.3.0" date="2022-09-21">
+      <p>Added:</p>
+      <ul>
+        <li>Palettes, consisting of darker shades and lighter tints, are now generated from the currently picked color as well as the previous 3</li>
+        <li>Change the order of the color formats by dragging and dropping them in the settings</li>
+        <li>The app has been translated into French by rene-coty</li>
+        <li>A German translation has been added</li>
+        <li>Adjusted some strings to be easier to understand</li>
+      </ul>
+    </release>
     <release version="0.2.0" date="2022-09-08">
       <p>Added:</p>
       <ul>
