removed cd from running on push

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,8 +3,8 @@
 name: Release
 on:
   #switch for debugging
-  push:
-    branches: [master]
+  # push:
+  #   branches: [master]
   release:
     types: [published]
 
