--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/finefindus/eyedropper"
 repository = "https://github.com/finefindus/eyedropper"
 
 
-#override package level optimazation, to always be maximum
+#override package level optimization, to always be maximum
 [profile.release.package."*"] 
 opt-level = 3
 
