--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -47,6 +47,9 @@
   <url type="bugtracker">https://github.com/FineFindus/eyedropper/issues</url>
   <content_rating type="oars-1.0" />
   <releases>
+    <release version="0.4.0">
+      See the in-app changelog for changes 
+    </release>
     <release version="0.3.1" date="2022-09-23">
       Fixed a few bugs and added Dutch translations. 
     </release>
