--- a/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
+++ b/data/com.github.finefindus.eyedropper.metainfo.xml.in.in
@@ -47,7 +47,7 @@
   <url type="bugtracker">https://github.com/FineFindus/eyedropper/issues</url>
   <content_rating type="oars-1.0" />
   <releases>
-    <release version="0.4.0">
+    <release version="0.4.0" date="2022-10-19">
       See the in-app changelog for changes 
     </release>
     <release version="0.3.1" date="2022-09-23">
