--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ repository = "https://github.com/finefindus/eyedropper"
 [profile.release.package."*"] 
 opt-level = 3
 
+[profile.release]
+lto = true
+opt-level = 3
 
 [dependencies]
 log = "0.4"
