added lms color space

--- a/data/com.github.finefindus.eyedropper.gschema.xml.in
+++ b/data/com.github.finefindus.eyedropper.gschema.xml.in
@@ -14,7 +14,7 @@
       <summary>Window maximized state</summary>
     </key>
     <key name="format-order" type="as">
-      <default>[ 'name', 'hex', 'rgb', 'hsl', 'hsv', 'cmyk', 'xyz', 'cielab', 'hwb', 'hcl' ]</default>
+      <default>[ 'name', 'hex', 'rgb', 'hsl', 'hsv', 'cmyk', 'xyz', 'cielab', 'hwb', 'hcl', 'lms' ]</default>
       <summary>Order of the formats</summary>
       <description>In which order the formats should be displayed. Only possible values should the format names.</description>
     </key>
@@ -72,6 +72,11 @@
       <default>false</default>
       <summary>Show Name</summary>
       <description>If the name of the color should be shown.</description>
+    </key>
+    <key name="show-lms-format" type="b">
+      <default>false</default>
+      <summary>Show LMS format</summary>
+      <description>Enables the LMS format.</description>
     </key>
     <key name="name-source-basic" type="b">
       <default>true</default>
