--- a/data/com.github.finefindus.eyedropper.gschema.xml.in
+++ b/data/com.github.finefindus.eyedropper.gschema.xml.in
@@ -108,5 +108,15 @@
       <summary>CIE standard observer</summary>
       <description>If 2° or 10° values are used for the CIE standard observer. Can only be 0 (2°) or 1 (10°).</description>
     </key>
+    <key name="use-default-precision" type="b">
+      <default>true</default>
+      <summary>Precision</summary>
+      <description>Use default precision for the formats.</description>
+    </key>
+    <key name="precision" type="u">
+      <default>2</default>
+      <summary>Precision</summary>
+      <description>Precision used in the formats.</description>
+    </key>
   </schema>
 </schemalist>
